<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.citylinkdata.yongzhou.userview.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/register_an_account"></com.citylinkdata.yongzhou.userview.TitleView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_phone_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/telephone_num"

            android:textSize="18sp" />

        <com.citylinkdata.yongzhou.userview.TimeButton
            android:id="@+id/btn_send_code"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ss_btn_corner_bg"
            android:text="@string/send"
            android:onClick="onClick"
            android:visibility="visible"
            android:enabled="false"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toLeftOf="@id/btn_send_code"
            android:layout_toRightOf="@id/tv_phone_tips"
            android:background="@null"
            android:maxLines="1"
            android:hint="@string/fill_in_mobile_number"
            android:textColorHint="@color/gray_hint" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line_main" />

    <LinearLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/verification_code"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:maxLines="1"
            android:hint="@string/fill_in_verification_code"
            android:textColorHint="@color/gray_hint" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/password"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:maxLines="1"
            android:hint="@string/fill_in_6_to_20_digits_plus_letters"
            android:textColorHint="@color/gray_hint"
            android:inputType="textPassword"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/agree"
            android:textColor="@color/gray_hint"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_registration_agreement"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:text="@string/user_Registration_Agreement"
            android:onClick="onClick"
            android:textColor="@color/black_menu" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textSize="16sp"
        android:enabled="false"
        android:onClick="onClick"
        android:background="@drawable/ss_btn_corner_bg"/>
</LinearLayout>
