<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.citylinkdata.yongzhou.userview.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/login_password"></com.citylinkdata.yongzhou.userview.TitleView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"

            android:text="@string/old_password"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/fill_in_the_old_password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray_hint" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/new_password"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/fill_in_the_new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray_hint" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/confirm_password"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/fill_in_the_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray_hint" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line_main" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:onClick="onClick"
        android:text="@string/determine"
        android:textSize="16sp"
        android:background="@drawable/ss_btn_corner_bg"/>
</LinearLayout>
